app/main/default/objects/sf_tfs__Work_Item_Field__c/sf_tfs__Work_Item_Field__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__ExtId__c</fullName>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Field__c</fullName>
        <label>Field</label>
        <referenceTo>sf_tfs__Field__c</referenceTo>
        <relationshipLabel>Work Item Fields</relationshipLabel>
        <relationshipName>Work_Item_Fields</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_tfs__States__c</fullName>
        <label>States</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Work_Item__c</fullName>
        <label>Work Item</label>
        <referenceTo>sf_tfs__Work_Item__c</referenceTo>
        <relationshipLabel>Work Item Fields</relationshipLabel>
        <relationshipName>Work_Item_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_tfs__isSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSynced</label>
        <type>Checkbox</type>
    </fields>
    <label>Work Item Field</label>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TFS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>