app/main/default/objects/sf_tfs__Work_Item_Field__c/fields/sf_tfs__ExtId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__ExtId__c</fullName>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>