app/main/default/objects/sf_tfs__Work_Item_Field__c/fields/sf_tfs__isSynced__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__isSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSynced</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>