app/main/default/objects/sf_tfs__Work_Item_Field__c/fields/sf_tfs__States__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__States__c</fullName>
        <label>States</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>