app/main/default/objects/sf_tfs__Work_Item_Field__c/fields/sf_tfs__Work_Item__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Work_Item__c</fullName>
        <label>Work Item</label>
        <referenceTo>sf_tfs__Work_Item__c</referenceTo>
        <relationshipLabel>Work Item Fields</relationshipLabel>
        <relationshipName>Work_Item_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>