app/main/default/objects/sf_tfs__Work_Item_Field__c/listViews/sf_tfs__All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>